BLI: BLI_path_has_hidden_component speedup and inconsistencies fix

Instead of a recursive function that scans the string for length
and separators several times, do all the logic in one pass over
the string.

Fixes two cases that were inconsistent before:
- Component that is only a "." was not considered hidden, except
  for the first folder component. Now first folder component that is
  just "." is also considered hidden.
- Component that ended in "~" was considered hidden, except for the
  first folder component. Now first folder that ends with ~ is also
  considered hidden.

Synthetic HasHiddenComponents_Performance test: 6.0s -> 1.1s for 50M
calls on Mac M1 Max.

More real world test (setup as in #120494): out of whole
build_catalog_tree time, the time taken by BLI_path_has_hidden_component
drops from 37% down to 28%